--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "rollup": "^2.11.2",
-    "rollup-plugin-terser": "^6.1.0"
+    "rollup-plugin-terser": "^6.1.0",
+    "slugify": "^1.4.0"
   },
   "dependencies": {
     "fast-glob": "^3.2.2"
