--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
     "gulp-postcss": "^8.0.0",
+    "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^2.0.0",
     "gulp-rev": "^9.0.0",
     "gulp-sass": "^4.1.0",
