--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,16 @@
   "version": 2,
   "routes": [
     {
+      "src": "/assets/css/*",
+      "headers": { "x-content-type-options": "nosniff" },
+      "continue": true
+    },
+    {
+      "src": "/assets/js/*",
+      "headers": { "x-content-type-options": "nosniff" },
+      "continue": true
+    },
+    {
       "src": "/assets/css/main-[a-zA-Z0-9]+.min.css",
       "headers": { "cache-control": "public, max-age=31536000, immutable" },
       "continue": true
