--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,29 @@
   "version": 2,
   "routes": [
     {
-      "src": "/assets/css/*",
+      "src": "/assets/css/*.css",
       "headers": { "x-content-type-options": "nosniff" },
       "continue": true
     },
     {
-      "src": "/assets/js/*",
+      "src": "/assets/js/*.js",
       "headers": { "x-content-type-options": "nosniff" },
       "continue": true
     },
     {
       "src": "/assets/css/main-[a-zA-Z0-9]+.min.css",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable",
+        "x-content-type-options": "nosniff"
+      },
       "continue": true
     },
     {
       "src": "/assets/js/main-[a-zA-Z0-9]+.min.js",
-      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable",
+        "x-content-type-options": "nosniff"
+      },
       "continue": true
     },
     { "handle": "filesystem" },
