--- a/src/site/_data/manifest.json
+++ b/src/site/_data/manifest.json
@@ -1,1 +1,4 @@
-{"main.min.css":"main-0f495b5cf1.min.css"}
+{
+  "main.min.css": "main-0f495b5cf1.min.css",
+  "main.min.js": "main-d5f98f03.min.js"
+}
