--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "html-minifier": "^4.0.0",
     "instant.page": "^5.1.0",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
