--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,32 @@
 {
   "version": 2,
   "routes": [
+    {
+      "src": "/assets/css/*.css",
+      "headers": { "x-content-type-options": "nosniff" },
+      "continue": true
+    },
+    {
+      "src": "/assets/js/*.js",
+      "headers": { "x-content-type-options": "nosniff" },
+      "continue": true
+    },
+    {
+      "src": "/assets/css/main-[a-zA-Z0-9]+.min.css",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable",
+        "x-content-type-options": "nosniff"
+      },
+      "continue": true
+    },
+    {
+      "src": "/assets/js/main-[a-zA-Z0-9]+.min.js",
+      "headers": {
+        "cache-control": "public, max-age=31536000, immutable",
+        "x-content-type-options": "nosniff"
+      },
+      "continue": true
+    },
     { "handle": "filesystem" },
     { "src": "/(.*)", "status": 404, "dest": "/404.html" }
   ]
