Add post-css as peer dep

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "slugify": "^1.4.0"
   },
   "dependencies": {
-    "fast-glob": "^3.2.2"
+    "fast-glob": "^3.2.2",
+    "postcss": "^8.2.2"
   }
 }
