--- a/package.json
+++ b/package.json
@@ -29,31 +29,32 @@
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-plugin-rss": "^1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "autoprefixer": "^9.8.0",
-    "del": "^5.1.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "autoprefixer": "^10.1.0",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-cssnano": "^2.1.3",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^2.0.0",
     "gulp-rev": "^9.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-size": "^3.0.0",
-    "gulp-sourcemaps": "^2.6.5",
+    "gulp-sourcemaps": "^3.0.0",
     "html-minifier": "^4.0.0",
     "instant.page": "^5.1.0",
     "lodash": "^4.17.15",
     "moment": "^2.26.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "rollup": "^2.11.2",
-    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-terser": "^7.0.2",
     "slugify": "^1.4.0"
   },
   "dependencies": {
-    "fast-glob": "^3.2.2"
+    "fast-glob": "^3.2.2",
+    "postcss": "^8.2.2"
   }
 }
