--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "autoprefixer": "^10.1.0",
+    "cssnano": "^4.1.10",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-cssnano": "^2.1.3",
     "gulp-postcss": "^9.0.0",
     "gulp-real-favicon": "^0.3.2",
     "gulp-rename": "^2.0.0",
@@ -48,13 +48,13 @@
     "moment": "^2.26.0",
     "node-sass": "^5.0.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.2.2",
     "prettier": "^2.0.5",
     "rollup": "^2.11.2",
     "rollup-plugin-terser": "^7.0.2",
     "slugify": "^1.4.0"
   },
   "dependencies": {
-    "fast-glob": "^3.2.2",
-    "postcss": "^8.2.2"
+    "fast-glob": "^3.2.2"
   }
 }
