--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "build": {
+    "env": {
+      "ZOLA_VERSION": "0.12.2"
+    }
+  },
   "routes": [
     {
       "src": "/assets/css/*.css",
