--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "build": {
+    "env": {
+      "ZOLA_VERSION": "0.12.2"
+    }
+  },
   "routes": [
     {
       "src": "/assets/css/*.css",
@@ -9,22 +14,6 @@
     {
       "src": "/assets/js/*.js",
       "headers": { "x-content-type-options": "nosniff" },
-      "continue": true
-    },
-    {
-      "src": "/assets/css/main-[a-zA-Z0-9]+.min.css",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable",
-        "x-content-type-options": "nosniff"
-      },
-      "continue": true
-    },
-    {
-      "src": "/assets/js/main-[a-zA-Z0-9]+.min.js",
-      "headers": {
-        "cache-control": "public, max-age=31536000, immutable",
-        "x-content-type-options": "nosniff"
-      },
       "continue": true
     },
     { "handle": "filesystem" },
