--- a/vercel.json
+++ b/vercel.json
@@ -5,18 +5,24 @@
       "ZOLA_VERSION": "0.12.2"
     }
   },
-  "routes": [
+  "headers": [
     {
-      "src": "/css/*.css",
-      "headers": { "x-content-type-options": "nosniff" },
-      "continue": true
+      "source": "/css/(.*).css",
+      "headers" : [
+        {
+          "key" : "X-Content-Type-Options",
+          "value" : "nosniff"
+        }
+      ]
     },
     {
-      "src": "/js/*.js",
-      "headers": { "x-content-type-options": "nosniff" },
-      "continue": true
-    },
-    { "handle": "filesystem" },
-    { "src": "/(.*)", "status": 404, "dest": "/404.html" }
+      "source": "/js/(.*).js",
+      "headers" : [
+        {
+          "key" : "X-Content-Type-Options",
+          "value" : "nosniff"
+        }
+      ]
+    }
   ]
 }
