--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ highlight_theme = "inspired-github"
 
 [extra]
 name = "David Chen"
-email = "hello@davidchen.io"
+email = "me@davidchen.io"
 github_id = "davidcgl"
 github_url = "https://github.com/davidcgl"
 linkedin_id = "davidcgl"
