Add contacts and work experience, update colors

--- a/config.toml
+++ b/config.toml
@@ -21,9 +21,9 @@ highlight_theme = "inspired-github"
 [extra]
 name = "David Chen"
 email = "me@davidchen.io"
-github_id = "davidcgl"
+github_id = "@davidcgl"
 github_url = "https://github.com/davidcgl"
-linkedin_id = "davidcgl"
+linkedin_id = "@davidcgl"
 linkedin_url = "https://www.linkedin.com/in/davidcgl"
 twitter_id = "@archenary"
 twitter_url = "https://twitter.com/archenary"
